# ffs-ai-shell

./: CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: skills.md
ffs/: cli.py  client.py  model_cmd.py  output.py  server_cmd.py
